refactor computation to use producer-consumer pattern to handle large ranges